feat(ecommerce): enhance CustomerDataService with detailed statistics and tier-based segmentation